--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -1,16 +1,34 @@
 .home {
-  position: relative;
+  margin-top: 120px;
 }
 
 .container {
   display: grid;
-  margin: 40px;
+  width: 75%;
+  margin: auto;
   grid-template-columns: repeat(4, 1fr);
 }
 
-@media (max-width: 1250px) {
+.tag {
+  text-align: center;
+  width: 75%;
+  margin: 50px auto 20px auto;
+  font-weight: bold;
+  font-size: 22px;
+  color: rgb(75, 72, 72);
+}
+
+@media (max-width: 1450px) {
   .container {
     grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 949px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .tag {
+    font-size: 15px;
   }
 }
 @media (max-width: 750px) {
