completed support and more

--- a/src/css/Modal.module.css
+++ b/src/css/Modal.module.css
@@ -48,7 +48,11 @@
 .content {
   overflow-y: scroll;
   width: 80%;
+  height: 100%;
   margin: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .cross:active {
