--- a/src/css/categorybar.module.css
+++ b/src/css/categorybar.module.css
@@ -1,4 +1,5 @@
 .category_bar {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -17,4 +18,19 @@
 
 .category:hover {
   background: rgba(255, 255, 255, 0.7);
+}
+
+@media (max-width: 750px) {
+  .category {
+    padding: 10px 4px;
+    font-size: 16px;
+  }
+  .category:hover {
+    background: transparent;
+  }
+}
+@media (max-width: 350px) {
+  .category {
+    font-size: 13px;
+  }
 }
