--- a/src/css/category_item.module.css
+++ b/src/css/category_item.module.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  position: relative;
 }
 .category_item > * {
   flex: 0.4;
@@ -15,10 +16,6 @@
   object-fit: contain;
   max-height: 250px;
   min-height: 100px;
-}
-.category_item img:hover {
-  transform: scale(1.1);
-  transition: transform 0.2s linear;
 }
 
 .category_item small {
@@ -62,4 +59,64 @@
 
 .pale {
   color: rgb(219, 187, 81) !important;
+}
+
+.wrapper {
+  position: relative;
+  transition: all 0.3s linear;
+}
+
+.overlay {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background: rgba(255, 255, 255, 0.4);
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+}
+
+.wrapper:hover > .overlay {
+  visibility: visible;
+}
+.btn {
+  width: 50px;
+  height: 50px;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  background: transparent;
+  transition: all 0.3s ease-in-out;
+}
+.btn:hover {
+  background: rgb(238, 238, 238, 0.7);
+}
+
+.btn:active {
+  transform: scale(0.98);
+}
+.tooltip {
+  background: rgba(0, 0, 0, 0.4);
+  color: white;
+  position: absolute;
+  top: 50%;
+  transform: translate(5%, -50%);
+  font-size: 0.8rem !important;
+  width: fit-content !important;
+  border-radius: 5px;
+  visibility: hidden;
+  transition: all 0.3s linear;
+  white-space: nowrap;
+}
+
+.btn:hover > .tooltip {
+  visibility: visible;
+}
+.btn > svg {
+  padding: 4px;
+  height: 45px !important;
 }
