completed auth and routing

--- a/src/css/Devloper.module.css
+++ b/src/css/Devloper.module.css
@@ -7,7 +7,7 @@
   position: relative;
   /* top: -50px; */
   padding: 1rem;
-  margin: auto;
+  margin: 20px auto;
   display: flex;
   justify-content: center;
   align-items: center;
