--- a/src/css/Cart.module.css
+++ b/src/css/Cart.module.css
@@ -3,8 +3,9 @@
   align-items: center;
   flex-direction: column;
   min-height: 100vh;
-
+  width: 100vw;
   padding: 10px;
+  padding-top: 200px;
 }
 
 .cart main {
