--- a/src/css/checkout.module.css
+++ b/src/css/checkout.module.css
@@ -12,41 +12,37 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
   height: 405px;
-  width: 305px;
+  width: fit-content;
 }
 .foreground {
   border-radius: 20px;
   background-color: rgb(214, 188, 74);
   color: white;
   box-shadow: 2px 2px 5px grey;
-  flex: 0.5;
+  height: 405px;
+  width: 305px;
   margin: 10px;
   padding: 10px;
   font-weight: bolder;
 }
 .visa {
   border-radius: 20px;
-  width: 20%;
+  width: 15%;
   color: white;
   flex: 0.5;
-}
-.stripe {
-  background-color: rgb(43, 42, 42);
-  width: 72%;
-  height: 30px;
-  display: inline-block;
 }
 
 .date {
   margin-top: 6px;
   font-size: 0.8rem;
+  text-shadow: 1px 1px 2px black;
 }
 .number {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  text-shadow: 1px 1px 2px black;
 }
 .clipboard {
   margin-left: 15px;
@@ -59,8 +55,29 @@
   transform: scale(0.98);
 }
 
-.cvc {
-  margin-left: 10px;
+.name {
+  text-shadow: 1px 1px 2px black;
+}
+
+.wrapper {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.cvc i {
+  color: black;
+  background: white;
+  height: 28px;
+  padding: 4px 8px;
+  flex: 0.7;
+}
+
+.stripe {
+  background-color: rgb(43, 42, 42);
+  width: 72%;
+  height: 30px;
+  display: inline-block;
 }
 
 .background {
@@ -68,12 +85,14 @@
   box-shadow: 2px 2px 5px grey;
   background-color: rgb(214, 188, 74);
   color: white;
-  flex: 0.5;
   margin: 10px;
   padding: 10px;
   padding-top: 30px;
+  height: 405px;
+  width: 305px;
   display: flex;
   justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .card span small {
