--- a/src/css/orders.module.css
+++ b/src/css/orders.module.css
@@ -1,4 +1,9 @@
 .orders {
-  padding-top: 200px;
   width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 200px;
 }
